Add selected color to user
