# src/api/services/user.service.ts
@@ -1,7 +1,19 @@
 import { IUser } from "../models/interfaces/IUser";
 import Users from "../models/user.model";
+import Articles from "../models/articles.model";
 
 const userService = () => {
+  const selectColorOnDB = async (userId: string, colorId: string) => {
+    const user = await Users.findById(userId);
+    const color = await Articles.findById(colorId);
+    if (user && color) {
+      user.color = color.title;
+      await user.save();
+      return user;
+    }
+    return null;
+  };
+
   const createUserOnDB = async (name: string): Promise<IUser> => {
     const createdUser = await Users.create({ name });
     return createdUser;
@@ -21,6 +33,7 @@ const userService = () => {
     createUserOnDB,
     getUsersFromDB,
     getUserByIdFromDB,
+    selectColorOnDB
   };
 };
 
